Left4DeadHelper.Bindings.DevILNative/Bindings/Il.cs


        public enum FeatureControls : uint
        {
            OriginSet = OriginDefinition.Set,
            FormatSet = FormatAndTypeModeDefinition.FormatSet,
            TypeSet = FormatAndTypeModeDefinition.TypeSet,
            FileOverwrite = FileDefinition.Overwrite,
            ConvPal = PaletteDefinition.ConvPal,
            DefaultOnFail = LoadFailDefinition.DefaultOnFail,
            UseKeyColor = KeyColourAndAlphaDefinition.UseKeyColor,
            BlitBlend = KeyColourAndAlphaDefinition.BlitBlend,
            SaveInterlaced = InterlaceDefinition.SaveInterlaced,
            JpgProgressive = FileFormatSpecificValue.JpgProgressive,
            NvidiaCompress = Compression.NvidiaCompress,
        }

        #endregion
        
        #region Callback Functions

        // Callback functions for file reading
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate void fCloseRProc(IntPtr handle);

        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.U1)]
        public delegate bool fEofProc(IntPtr handle);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate int fGetcProc(IntPtr handle);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate IntPtr fOpenRProc([MarshalAs(UnmanagedType.LPWStr)] string str);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate int fReadProc(IntPtr ptr1, uint a, uint b, IntPtr ptr2);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate int fSeekRProc(IntPtr handle, int a, int b);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate int fTellRProc(IntPtr handle);

        // Callback functions for file writing
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate void fCloseWProc(IntPtr handle);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate IntPtr fOpenWProc([MarshalAs(UnmanagedType.LPWStr)] string str);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate int fPutcProc(char c, IntPtr handle);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate int fSeekWProc(IntPtr handle, int a, int b);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate int fTellWProc(IntPtr handle);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate int fWriteProc(IntPtr ptr1, uint a, uint b, IntPtr ptr2);

        // Callback functions for allocation and deallocation
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate IntPtr mAlloc(ulong size);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate void mFree(IntPtr ptr);

        // Registered format procedures
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate uint IL_LOADPROC([MarshalAs(UnmanagedType.LPWStr)] string str);
        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate uint IL_SAVEPROC([MarshalAs(UnmanagedType.LPWStr)] string str);

        #endregion

        #region Functions

        // ImageLib Functions
        public unsafe static uint ActiveFace(uint number)
        {
            return Common.IsWow64() ? x64.ilActiveFace(number) : x86.ilActiveFace(number);
        }

        public unsafe static bool ActiveImage(uint number)
        {
            return Common.IsWow64() ? x64.ilActiveImage(number) : x86.ilActiveImage(number);
        }

        public unsafe static bool ActiveLayer(uint number)
        {
            return Common.IsWow64() ? x64.ilActiveLayer(number) : x86.ilActiveLayer(number);
        }

        public unsafe static bool ActiveMipmap(uint number)
        {
            return Common.IsWow64() ? x64.ilActiveMipmap(number) : x86.ilActiveMipmap(number);
        }

        public unsafe static bool ApplyPal(string fileName)
        {
            return Common.IsWow64() ? x64.ilApplyPal(fileName) : x86.ilApplyPal(fileName);
        }

        public unsafe static bool ApplyProfile(string inProfile, string outProfile)
        {
            return Common.IsWow64() ? x64.ilApplyProfile(inProfile, outProfile) : x86.ilApplyProfile(inProfile, outProfile);
        }
        public unsafe static void BindImage(uint image)
        {
            if (Common.IsWow64()) x64.ilBindImage(image); else x86.ilBindImage(image);
        }

        public unsafe static bool Blit(uint source,
            int destX, int destY, int destZ,
            uint srcX, uint srcY, uint srcZ,
            uint width, uint height, uint depth)
        {
            return Common.IsWow64()
                ? x64.ilBlit(source,
                    destX, destY, destZ,
                    srcX, srcY, srcZ,
                    width, height, depth)
                : x86.ilBlit(source,
                    destX, destY, destZ,
                    srcX, srcY, srcZ,
                    width, height, depth);
        }

        public unsafe static bool ClampNTSC()
        {
            return Common.IsWow64() ? x64.ilClampNTSC() : x86.ilClampNTSC();
        }

        public unsafe static void ClearColour(float red, float green, float blue, float alpha)
        {
            if (Common.IsWow64()) x64.ilClearColour(red, green, blue, alpha); else x86.ilClearColour(red, green, blue, alpha);
        }

        public unsafe static bool ClearImage()
        {
            return Common.IsWow64() ? x64.ilClearImage() : x86.ilClearImage();
        }

        public unsafe static uint CloneCurImage()
        {
            return Common.IsWow64() ? x64.ilCloneCurImage() : x86.ilCloneCurImage();
        }

        public unsafe static byte* CompressDXT(byte* data,
            uint width, uint height, uint depth, DxtcDefinition dxtcFormat, uint* dxtcSize)
        {
            return Common.IsWow64()
                ? x64.ilCompressDXT(data, width, height, depth, dxtcFormat, dxtcSize)
                : x86.ilCompressDXT(data, width, height, depth, dxtcFormat, dxtcSize);
        }

        public unsafe static bool CompressFunc(Compression mode)
        {
            return Common.IsWow64() ? x64.ilCompressFunc(mode) : x86.ilCompressFunc(mode);
        }

        public unsafe static bool ConvertImage(DataFormat destFormat, DataType destType)
        {
            return Common.IsWow64() ? x64.ilConvertImage(destFormat, destType) : x86.ilConvertImage(destFormat, destType);
        }

        public unsafe static bool ConvertPal(PaletteType destFormat)
        {
            return Common.IsWow64() ? x64.ilConvertPal(destFormat) : x86.ilConvertPal(destFormat);
        }

        public unsafe static bool CopyImage(uint src)
        {
            return Common.IsWow64() ? x64.ilCopyImage(src) : x86.ilCopyImage(src);
        }

        public unsafe static uint CopyPixels(
            uint xOff, uint yOff, uint zOff,
            uint width, uint height, uint depth,
            DataFormat format, DataType type, IntPtr data)
        {
            return Common.IsWow64()
                ? x64.ilCopyPixels(
                    xOff, yOff, zOff,
                    width, height, depth,
                    format, type, data)
                : x86.ilCopyPixels(
                    xOff, yOff, zOff,
                    width, height, depth,
                    format, type, data);
        }

        public unsafe static uint CreateSubImage(SubimageType type, uint num)
        {
            return Common.IsWow64() ? x64.ilCreateSubImage(type, num) : x86.ilCreateSubImage(type, num);
        }

        public unsafe static bool DefaultImage()
        {
            return Common.IsWow64() ? x64.ilDefaultImage() : x86.ilDefaultImage();
        }

        public unsafe static void DeleteImage(uint num)
        {
            if (Common.IsWow64()) x64.ilDeleteImage(num); else x86.ilDeleteImage(num);
        }

        public unsafe static void DeleteImages(UIntPtr num, uint* images)
        {
            if (Common.IsWow64()) x64.ilDeleteImages(num, images); else x86.ilDeleteImages(num, images);
        }

        public unsafe static ImageType DetermineType(string fileName)
        {
            return Common.IsWow64() ? x64.ilDetermineType(fileName) : x86.ilDetermineType(fileName);
        }

        public unsafe static ImageType DetermineTypeF(IntPtr fileHandle)
        {
            return Common.IsWow64() ? x64.ilDetermineTypeF(fileHandle) : x86.ilDetermineTypeF(fileHandle);
        }

        public unsafe static ImageType DetermineTypeL(IntPtr lump, uint size)
        {
            return Common.IsWow64() ? x64.ilDetermineTypeL(lump, size) : x86.ilDetermineTypeL(lump, size);
        }

        public unsafe static bool Disable(uint mode)
        {
            return Common.IsWow64() ? x64.ilDisable(mode) : x86.ilDisable(mode);
        }

        public unsafe static bool Disable(FeatureControls mode)
        {
            return Disable((uint) mode);
        }

        public unsafe static bool DxtcDataToImage()
        {
            return Common.IsWow64() ? x64.ilDxtcDataToImage() : x86.ilDxtcDataToImage();
        }

        public unsafe static bool DxtcDataToSurface()
        {
            return Common.IsWow64() ? x64.ilDxtcDataToSurface() : x86.ilDxtcDataToSurface();
        }

        public unsafe static bool Enable(uint mode)
        {
            return Common.IsWow64() ? x64.ilEnable(mode) : x86.ilEnable(mode);
        }

        public unsafe static bool Enable(FeatureControls mode)
        {
            return Enable((uint) mode);
        }

        public unsafe static void FlipSurfaceDxtcData()
        {
            if (Common.IsWow64()) x64.ilFlipSurfaceDxtcData(); else x86.ilFlipSurfaceDxtcData();
        }

        public unsafe static bool FormatFunc(DataFormat mode)
        {
            return Common.IsWow64() ? x64.ilFormatFunc(mode) : x86.ilFormatFunc(mode);
        }

        public unsafe static void GenImages(UIntPtr num, uint* images)
        {
            if (Common.IsWow64()) x64.ilGenImages(num, images); else x86.ilGenImages(num, images);
        }

        public unsafe static uint GenImage()
        {
            return Common.IsWow64() ? x64.ilGenImage() : x86.ilGenImage();
        }

        public unsafe static byte* GetAlpha(DataType type)
        {
            return Common.IsWow64() ? x64.ilGetAlpha(type) : x86.ilGetAlpha(type);
        }

        public unsafe static bool GetBoolean(uint mode)
        {
            return Common.IsWow64() ? x64.ilGetBoolean(mode) : x86.ilGetBoolean(mode);
        }

        public unsafe static bool GetBoolean(FeatureControls mode)
        {
            return GetBoolean((uint) mode);
        }

        public unsafe static void GetBooleanv(uint mode, out bool param)
        {
            if (Common.IsWow64()) x64.ilGetBooleanv(mode, out param); else x86.ilGetBooleanv(mode, out param);
        }

        public unsafe static void GetBooleanv(FeatureControls mode, out bool param)
        {
            GetBooleanv((uint)mode, out param);
        }

        public unsafe static byte* GetData()
        {
            return Common.IsWow64() ? x64.ilGetData() : x86.ilGetData();
        }

        public unsafe static uint GetDXTCData(IntPtr buffer, uint bufferSize, DxtcDefinition dxtcFormat)
        {
            return Common.IsWow64() ? x64.ilGetDXTCData(buffer, bufferSize, dxtcFormat) : x86.ilGetDXTCData(buffer, bufferSize, dxtcFormat);
        }

        public unsafe static ErrorType GetError()
        {
            return Common.IsWow64() ? (ErrorType) x64.ilGetError() : (ErrorType) x86.ilGetError();
        }

        public unsafe static uint GetErrorUint()
        {
            return Common.IsWow64() ? x64.ilGetError() : x86.ilGetError();
        }
